start overhauling palette and color use

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -4419,21 +4419,21 @@ $('#slider2').CFW_Slider({
 <h3>Palette Colors:</h3>
 
 <div class="row">
-    <div class="palette col-sm-4">
-        Grayscale:<br />
-        <div class="palette-item bg-gray-50">50</div>
-        <div class="palette-item bg-gray-100">100</div>
-        <div class="palette-item bg-gray-200">200</div>
-        <div class="palette-item bg-gray-300">300</div>
-        <div class="palette-item bg-gray-400">400</div>
-        <div class="palette-item bg-gray-500 text-light">500</div>
-        <div class="palette-item bg-gray-600 text-light">600</div>
-        <div class="palette-item bg-gray-700 text-light">700</div>
-        <div class="palette-item bg-gray-800 text-light">800</div>
-        <div class="palette-item bg-gray-900 text-light">900</div>
+    <div class="palette col-sm-4 col-lg-2">
+        UI Base:<br />
+        <div class="palette-item bg-uibase-50">50</div>
+        <div class="palette-item bg-uibase-100">100</div>
+        <div class="palette-item bg-uibase-200">200</div>
+        <div class="palette-item bg-uibase-300">300</div>
+        <div class="palette-item bg-uibase-400">400</div>
+        <div class="palette-item bg-uibase-500 text-light">500</div>
+        <div class="palette-item bg-uibase-600 text-light">600</div>
+        <div class="palette-item bg-uibase-700 text-light">700</div>
+        <div class="palette-item bg-uibase-800 text-light">800</div>
+        <div class="palette-item bg-uibase-900 text-light">900</div>
     </div>
 
-    <div class="palette col-sm-4">
+    <div class="palette col-sm-4 col-lg-2">
         Red:<br />
         <div class="palette-item bg-red-50">50</div>
         <div class="palette-item bg-red-100">100</div>
@@ -4447,7 +4447,7 @@ $('#slider2').CFW_Slider({
         <div class="palette-item bg-red-900 text-light">900</div>
     </div>
 
-    <div class="palette col-sm-4">
+    <div class="palette col-sm-4 col-lg-2">
         Green:<br />
         <div class="palette-item bg-green-50">50</div>
         <div class="palette-item bg-green-100">100</div>
@@ -4461,7 +4461,7 @@ $('#slider2').CFW_Slider({
         <div class="palette-item bg-green-900 text-light">900</div>
     </div>
 
-    <div class="palette col-sm-4">
+    <div class="palette col-sm-4 col-lg-2">
         Blue:<br />
         <div class="palette-item bg-blue-50">50</div>
         <div class="palette-item bg-blue-100">100</div>
@@ -4475,7 +4475,7 @@ $('#slider2').CFW_Slider({
         <div class="palette-item bg-blue-900 text-light">900</div>
     </div>
 
-    <div class="palette col-sm-4">
+    <div class="palette col-sm-4 col-lg-2">
         Cyan:<br />
         <div class="palette-item bg-cyan-50">50</div>
         <div class="palette-item bg-cyan-100">100</div>
@@ -4489,18 +4489,34 @@ $('#slider2').CFW_Slider({
         <div class="palette-item bg-cyan-900 text-light">900</div>
     </div>
 
-    <div class="palette col-sm-4">
-        Mustard:<br />
-        <div class="palette-item bg-mustard-50">50</div>
-        <div class="palette-item bg-mustard-100">100</div>
-        <div class="palette-item bg-mustard-200">200</div>
-        <div class="palette-item bg-mustard-300">300</div>
-        <div class="palette-item bg-mustard-400">400</div>
-        <div class="palette-item bg-mustard-500 text-light">500</div>
-        <div class="palette-item bg-mustard-600 text-light">600</div>
-        <div class="palette-item bg-mustard-700 text-light">700</div>
-        <div class="palette-item bg-mustard-800 text-light">800</div>
-        <div class="palette-item bg-mustard-900 text-light">900</div>
+    <div class="palette col-sm-4 col-lg-2">
+        Yellow:<br />
+        <div class="palette-item bg-yellow-50">50</div>
+        <div class="palette-item bg-yellow-100">100</div>
+        <div class="palette-item bg-yellow-200">200</div>
+        <div class="palette-item bg-yellow-300">300</div>
+        <div class="palette-item bg-yellow-400">400</div>
+        <div class="palette-item bg-yellow-500 text-light">500</div>
+        <div class="palette-item bg-yellow-600 text-light">600</div>
+        <div class="palette-item bg-yellow-700 text-light">700</div>
+        <div class="palette-item bg-yellow-800 text-light">800</div>
+        <div class="palette-item bg-yellow-900 text-light">900</div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="palette col-sm-4 col-lg-2">
+        Grayscale:<br />
+        <div class="palette-item bg-gray-50">50</div>
+        <div class="palette-item bg-gray-100">100</div>
+        <div class="palette-item bg-gray-200">200</div>
+        <div class="palette-item bg-gray-300">300</div>
+        <div class="palette-item bg-gray-400">400</div>
+        <div class="palette-item bg-gray-500 text-light">500</div>
+        <div class="palette-item bg-gray-600 text-light">600</div>
+        <div class="palette-item bg-gray-700 text-light">700</div>
+        <div class="palette-item bg-gray-800 text-light">800</div>
+        <div class="palette-item bg-gray-900 text-light">900</div>
     </div>
 </div>
 
