add visual test examples

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1550,17 +1550,22 @@ Showing a <kbd>kdb sample</kbd>
 <button type="button" class="btn btn-info">Info</button>
 <button type="button" class="btn btn-warning">Warning</button>
 <button type="button" class="btn btn-danger">Danger</button>
+<button type="button" class="btn btn-light">Light</button>
+<button type="button" class="btn btn-dark">Dark</button>
 <button type="button" class="btn btn-link">Link</button>
 </p>
 
 <h3>Outline buttons</h3>
 <p>
+<button type="button" class="btn btn-outline">Default</button>
 <button type="button" class="btn btn-outline-primary">Primary</button>
 <button type="button" class="btn btn-outline-secondary">Secondary</button>
 <button type="button" class="btn btn-outline-success">Success</button>
 <button type="button" class="btn btn-outline-info">Info</button>
 <button type="button" class="btn btn-outline-warning">Warning</button>
 <button type="button" class="btn btn-outline-danger">Danger</button>
+<button type="button" class="btn btn-outline-light">Light</button>
+<button type="button" class="btn btn-outline-dark">Dark</button>
 </p>
 
 <h3>Active buttons</h3>
@@ -1572,15 +1577,20 @@ Showing a <kbd>kdb sample</kbd>
 <button type="button" class="btn btn-info active">Info</button>
 <button type="button" class="btn btn-warning active">Warning</button>
 <button type="button" class="btn btn-danger active">Danger</button>
+<button type="button" class="btn btn-light active">Light</button>
+<button type="button" class="btn btn-dark active">Dark</button>
 <button type="button" class="btn btn-link active">Link</button>
 </p>
 <p>
+<button type="button" class="btn btn-outline active">Default</button>
 <button type="button" class="btn btn-outline-primary active">Primary</button>
 <button type="button" class="btn btn-outline-secondary active">Secondary</button>
 <button type="button" class="btn btn-outline-success active">Success</button>
 <button type="button" class="btn btn-outline-info active">Info</button>
 <button type="button" class="btn btn-outline-warning active">Warning</button>
 <button type="button" class="btn btn-outline-danger active">Danger</button>
+<button type="button" class="btn btn-outline-light active">Light</button>
+<button type="button" class="btn btn-outline-dark active">Dark</button>
 </p>
 
 <h3>Disabled buttons</h3>
@@ -1593,14 +1603,19 @@ Showing a <kbd>kdb sample</kbd>
 <button type="button" class="btn btn-warning" disabled>Warning</button>
 <button type="button" class="btn btn-danger" disabled>Danger</button>
 <button type="button" class="btn btn-link" disabled>Link</button>
+<button type="button" class="btn btn-light" disabled>Light</button>
+<button type="button" class="btn btn-dark" disabled>Dark</button>
 </p>
 <p>
+<button type="button" class="btn btn-outline" disabled>Default</button>
 <button type="button" class="btn btn-outline-primary" disabled>Primary</button>
 <button type="button" class="btn btn-outline-secondary" disabled>Secondary</button>
 <button type="button" class="btn btn-outline-success" disabled>Success</button>
 <button type="button" class="btn btn-outline-info" disabled>Info</button>
 <button type="button" class="btn btn-outline-warning" disabled>Warning</button>
 <button type="button" class="btn btn-outline-danger" disabled>Danger</button>
+<button type="button" class="btn btn-outline-light" disabled>Light</button>
+<button type="button" class="btn btn-outline-dark" disabled>Dark</button>
 </p>
 Anchor variants:<br />
 <p>
@@ -1611,15 +1626,20 @@ Anchor variants:<br />
 <a href="#" role="button" class="btn btn-info disabled">Info</a>
 <a href="#" role="button" class="btn btn-warning disabled">Warning</a>
 <a href="#" role="button" class="btn btn-danger disabled">Danger</a>
+<a href="#" role="button" class="btn btn-light disabled">Light</a>
+<a href="#" role="button" class="btn btn-dark disabled">Dark</a>
 <a href="#" role="button" class="btn btn-link disabled">Link</a>
 </p>
 <p>
+<a href="#" role="button" class="btn btn-outline disabled">Default</a>
 <a href="#" role="button" class="btn btn-outline-primary disabled">Primary</a>
 <a href="#" role="button" class="btn btn-outline-secondary disabled">Secondary</a>
 <a href="#" role="button" class="btn btn-outline-success disabled">Success</a>
 <a href="#" role="button" class="btn btn-outline-info disabled">Info</a>
 <a href="#" role="button" class="btn btn-outline-warning disabled">Warning</a>
 <a href="#" role="button" class="btn btn-outline-danger disabled">Danger</a>
+<a href="#" role="button" class="btn btn-outline-light disabled">Light</a>
+<a href="#" role="button" class="btn btn-outline-dark disabled">Dark</a>
 </p>
 
 <h3>Button sizes</h3>
@@ -1766,16 +1786,26 @@ Anchor variants:<br />
 
 <h3>List group context</h3>
 <ul class="list-group">
-  <li class="list-group-item list-group-item-success">Dapibus ac facilisis in</li>
-  <li class="list-group-item list-group-item-info">Cras sit amet nibh libero</li>
-  <li class="list-group-item list-group-item-warning">Porta ac consectetur ac</li>
-  <li class="list-group-item list-group-item-danger">Vestibulum at eros</li>
+  <li class="list-group-item">Default list group item</li>
+  <li class="list-group-item list-group-item-primary">Primary list group item</li>
+  <li class="list-group-item list-group-item-secondary">Secondary list group item</li>
+  <li class="list-group-item list-group-item-success">Success list group item</li>
+  <li class="list-group-item list-group-item-info">Info list group item</li>
+  <li class="list-group-item list-group-item-warning">Warning list group item</li>
+  <li class="list-group-item list-group-item-danger">Danger list group item</li>
+  <li class="list-group-item list-group-item-light">Light list group item</li>
+  <li class="list-group-item list-group-item-dark">Dark list group item</li>
 </ul>
 <div class="list-group">
-  <a href="#" class="list-group-item list-group-item-action list-group-item-success">Dapibus ac facilisis in</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-info">Cras sit amet nibh libero</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-warning">Porta ac consectetur ac</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-danger">Vestibulum at eros</a>
+  <a href="#" class="list-group-item list-group-item-action">Default list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Primary list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">Secondary list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-success">Success list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-info">Info list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-warning">Warning list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-danger">Danger list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-light">Light list group item</a>
+  <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Dark list group item</a>
 </div>
 
 <h3>Custom list group</h3>
@@ -3178,6 +3208,8 @@ Anchor variants:<br />
 <span class="badge badge-info">Info</span>
 <span class="badge badge-warning">Warning</span>
 <span class="badge badge-danger">Danger</span>
+<span class="badge badge-light">Light</span>
+<span class="badge badge-dark">Dark</span>
 
 <h3>Badge anchors</h3>
 <a href="#" class="badge">Default</a>
@@ -3187,6 +3219,8 @@ Anchor variants:<br />
 <a href="#" class="badge badge-info">Info</a>
 <a href="#" class="badge badge-warning">Warning</a>
 <a href="#" class="badge badge-danger">Danger</a>
+<a href="#" class="badge badge-light">Light</a>
+<a href="#" class="badge badge-dark">Dark</a>
 
 <h3>Badge pills</h3>
 <span class="badge badge-pill">Default</span>
@@ -3196,6 +3230,8 @@ Anchor variants:<br />
 <span class="badge badge-pill badge-info">Info</span>
 <span class="badge badge-pill badge-warning">Warning</span>
 <span class="badge badge-pill badge-danger">Danger</span>
+<span class="badge badge-pill badge-light">Light</span>
+<span class="badge badge-pill badge-dark">Dark</span>
 
 <h3>Badge outline</h3>
 <span class="badge badge-outline">Default</span>
@@ -3205,6 +3241,8 @@ Anchor variants:<br />
 <span class="badge badge-outline-info">Info</span>
 <span class="badge badge-outline-warning">Warning</span>
 <span class="badge badge-outline-danger">Danger</span>
+<span class="badge badge-outline-light">Light</span>
+<span class="badge badge-outline-dark">Dark</span>
 
 <h3>Badge outline anchors</h3>
 <a href="#" class="badge badge-outline">Default</a>
@@ -3214,26 +3252,34 @@ Anchor variants:<br />
 <a href="#"  class="badge badge-outline-info">Info</a>
 <a href="#"  class="badge badge-outline-warning">Warning</a>
 <a href="#"  class="badge badge-outline-danger">Danger</a>
+<a href="#"  class="badge badge-outline-light">Light</a>
+<a href="#"  class="badge badge-outline-dark">Dark</a>
 
 
 <h3>Alerts</h3>
 <div class="alert alert-primary" role="alert">
-  <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
+  Primary alert message with <a href="#" class="alert-link">an example link</a> included.
 </div>
 <div class="alert alert-secondary" role="alert">
-  <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
+  Secondary alert message with <a href="#" class="alert-link">an example link</a> included.
 </div>
 <div class="alert alert-success" role="alert">
-  <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
+  Success alert message with <a href="#" class="alert-link">an example link</a> included.
 </div>
 <div class="alert alert-info" role="alert">
-  <strong>Heads up!</strong> This <a href="#" class="alert-link">alert needs your attention</a>, but it's not super important.
+  Info alert message with <a href="#" class="alert-link">an example link</a> included.
 </div>
 <div class="alert alert-warning" role="alert">
-  <strong>Warning!</strong> Better check yourself, you're <a href="#" class="alert-link">not looking too good</a>.
+  Warning alert message with <a href="#" class="alert-link">an example link</a> included.
 </div>
 <div class="alert alert-danger" role="alert">
-  <strong>Oh snap!</strong> <a href="#" class="alert-link">Change a few things up</a> and try submitting again.
+  Danger alert message with <a href="#" class="alert-link">an example link</a> included.
+</div>
+<div class="alert alert-light" role="alert">
+  Light alert message with <a href="#" class="alert-link">an example link</a> included.
+</div>
+<div class="alert alert-dark" role="alert">
+  Dark alert message with <a href="#" class="alert-link">an example link</a> included.
 </div>
 
 <h3>Full alert</h3>
@@ -4434,73 +4480,73 @@ $('#slider2').CFW_Slider({
     </div>
 
     <div class="palette col-sm-4 col-lg-2">
-        Red:<br />
-        <div class="palette-item bg-red-50">50</div>
-        <div class="palette-item bg-red-100">100</div>
-        <div class="palette-item bg-red-200">200</div>
-        <div class="palette-item bg-red-300">300</div>
-        <div class="palette-item bg-red-400">400</div>
-        <div class="palette-item bg-red-500 text-light">500</div>
-        <div class="palette-item bg-red-600 text-light">600</div>
-        <div class="palette-item bg-red-700 text-light">700</div>
-        <div class="palette-item bg-red-800 text-light">800</div>
-        <div class="palette-item bg-red-900 text-light">900</div>
+        Danger:<br />
+        <div class="palette-item bg-danger-50">50</div>
+        <div class="palette-item bg-danger-100">100</div>
+        <div class="palette-item bg-danger-200">200</div>
+        <div class="palette-item bg-danger-300">300</div>
+        <div class="palette-item bg-danger-400">400</div>
+        <div class="palette-item bg-danger-500 text-light">500</div>
+        <div class="palette-item bg-danger-600 text-light">600</div>
+        <div class="palette-item bg-danger-700 text-light">700</div>
+        <div class="palette-item bg-danger-800 text-light">800</div>
+        <div class="palette-item bg-danger-900 text-light">900</div>
     </div>
 
     <div class="palette col-sm-4 col-lg-2">
-        Green:<br />
-        <div class="palette-item bg-green-50">50</div>
-        <div class="palette-item bg-green-100">100</div>
-        <div class="palette-item bg-green-200">200</div>
-        <div class="palette-item bg-green-300">300</div>
-        <div class="palette-item bg-green-400">400</div>
-        <div class="palette-item bg-green-500 text-light">500</div>
-        <div class="palette-item bg-green-600 text-light">600</div>
-        <div class="palette-item bg-green-700 text-light">700</div>
-        <div class="palette-item bg-green-800 text-light">800</div>
-        <div class="palette-item bg-green-900 text-light">900</div>
+        Success:<br />
+        <div class="palette-item bg-success-50">50</div>
+        <div class="palette-item bg-success-100">100</div>
+        <div class="palette-item bg-success-200">200</div>
+        <div class="palette-item bg-success-300">300</div>
+        <div class="palette-item bg-success-400">400</div>
+        <div class="palette-item bg-success-500 text-light">500</div>
+        <div class="palette-item bg-success-600 text-light">600</div>
+        <div class="palette-item bg-success-700 text-light">700</div>
+        <div class="palette-item bg-success-800 text-light">800</div>
+        <div class="palette-item bg-success-900 text-light">900</div>
     </div>
 
     <div class="palette col-sm-4 col-lg-2">
-        Blue:<br />
-        <div class="palette-item bg-blue-50">50</div>
-        <div class="palette-item bg-blue-100">100</div>
-        <div class="palette-item bg-blue-200">200</div>
-        <div class="palette-item bg-blue-300">300</div>
-        <div class="palette-item bg-blue-400">400</div>
-        <div class="palette-item bg-blue-500 text-light">500</div>
-        <div class="palette-item bg-blue-600 text-light">600</div>
-        <div class="palette-item bg-blue-700 text-light">700</div>
-        <div class="palette-item bg-blue-800 text-light">800</div>
-        <div class="palette-item bg-blue-900 text-light">900</div>
+        Primary:<br />
+        <div class="palette-item bg-primary-50">50</div>
+        <div class="palette-item bg-primary-100">100</div>
+        <div class="palette-item bg-primary-200">200</div>
+        <div class="palette-item bg-primary-300">300</div>
+        <div class="palette-item bg-primary-400">400</div>
+        <div class="palette-item bg-primary-500 text-light">500</div>
+        <div class="palette-item bg-primary-600 text-light">600</div>
+        <div class="palette-item bg-primary-700 text-light">700</div>
+        <div class="palette-item bg-primary-800 text-light">800</div>
+        <div class="palette-item bg-primary-900 text-light">900</div>
     </div>
 
     <div class="palette col-sm-4 col-lg-2">
-        Cyan:<br />
-        <div class="palette-item bg-cyan-50">50</div>
-        <div class="palette-item bg-cyan-100">100</div>
-        <div class="palette-item bg-cyan-200">200</div>
-        <div class="palette-item bg-cyan-300">300</div>
-        <div class="palette-item bg-cyan-400">400</div>
-        <div class="palette-item bg-cyan-500 text-light">500</div>
-        <div class="palette-item bg-cyan-600 text-light">600</div>
-        <div class="palette-item bg-cyan-700 text-light">700</div>
-        <div class="palette-item bg-cyan-800 text-light">800</div>
-        <div class="palette-item bg-cyan-900 text-light">900</div>
+        Secondary:<br />
+        <div class="palette-item bg-secondary-50">50</div>
+        <div class="palette-item bg-secondary-100">100</div>
+        <div class="palette-item bg-secondary-200">200</div>
+        <div class="palette-item bg-secondary-300">300</div>
+        <div class="palette-item bg-secondary-400">400</div>
+        <div class="palette-item bg-secondary-500 text-light">500</div>
+        <div class="palette-item bg-secondary-600 text-light">600</div>
+        <div class="palette-item bg-secondary-700 text-light">700</div>
+        <div class="palette-item bg-secondary-800 text-light">800</div>
+        <div class="palette-item bg-secondary-900 text-light">900</div>
     </div>
 
     <div class="palette col-sm-4 col-lg-2">
-        Yellow:<br />
-        <div class="palette-item bg-yellow-50">50</div>
-        <div class="palette-item bg-yellow-100">100</div>
-        <div class="palette-item bg-yellow-200">200</div>
-        <div class="palette-item bg-yellow-300">300</div>
-        <div class="palette-item bg-yellow-400">400</div>
-        <div class="palette-item bg-yellow-500 text-light">500</div>
-        <div class="palette-item bg-yellow-600 text-light">600</div>
-        <div class="palette-item bg-yellow-700 text-light">700</div>
-        <div class="palette-item bg-yellow-800 text-light">800</div>
-        <div class="palette-item bg-yellow-900 text-light">900</div>
+        Warning:<br />
+        <div class="palette-item bg-warning-50">50</div>
+        <div class="palette-item bg-warning-100">100</div>
+        <div class="palette-item bg-warning-200">200</div>
+        <div class="palette-item bg-warning-300">300</div>
+        <div class="palette-item bg-warning-400">400</div>
+        <div class="palette-item bg-warning-500 text-light">500</div>
+        <div class="palette-item bg-warning-600 text-light">600</div>
+        <div class="palette-item bg-warning-700 text-light">700</div>
+        <div class="palette-item bg-warning-800 text-light">800</div>
+        <div class="palette-item bg-warning-900 text-light">900</div>
     </div>
 </div>
 
