--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -4465,49 +4465,7 @@ $('#slider2').CFW_Slider({
 <h3>Palette Colors:</h3>
 
 <div class="row">
-    <div class="palette col-sm-4 col-lg-2">
-        UI Base:<br />
-        <div class="palette-item bg-uibase-50">50</div>
-        <div class="palette-item bg-uibase-100">100</div>
-        <div class="palette-item bg-uibase-200">200</div>
-        <div class="palette-item bg-uibase-300">300</div>
-        <div class="palette-item bg-uibase-400">400</div>
-        <div class="palette-item bg-uibase-500 text-light">500</div>
-        <div class="palette-item bg-uibase-600 text-light">600</div>
-        <div class="palette-item bg-uibase-700 text-light">700</div>
-        <div class="palette-item bg-uibase-800 text-light">800</div>
-        <div class="palette-item bg-uibase-900 text-light">900</div>
-    </div>
-
-    <div class="palette col-sm-4 col-lg-2">
-        Danger:<br />
-        <div class="palette-item bg-danger-50">50</div>
-        <div class="palette-item bg-danger-100">100</div>
-        <div class="palette-item bg-danger-200">200</div>
-        <div class="palette-item bg-danger-300">300</div>
-        <div class="palette-item bg-danger-400">400</div>
-        <div class="palette-item bg-danger-500 text-light">500</div>
-        <div class="palette-item bg-danger-600 text-light">600</div>
-        <div class="palette-item bg-danger-700 text-light">700</div>
-        <div class="palette-item bg-danger-800 text-light">800</div>
-        <div class="palette-item bg-danger-900 text-light">900</div>
-    </div>
-
-    <div class="palette col-sm-4 col-lg-2">
-        Success:<br />
-        <div class="palette-item bg-success-50">50</div>
-        <div class="palette-item bg-success-100">100</div>
-        <div class="palette-item bg-success-200">200</div>
-        <div class="palette-item bg-success-300">300</div>
-        <div class="palette-item bg-success-400">400</div>
-        <div class="palette-item bg-success-500 text-light">500</div>
-        <div class="palette-item bg-success-600 text-light">600</div>
-        <div class="palette-item bg-success-700 text-light">700</div>
-        <div class="palette-item bg-success-800 text-light">800</div>
-        <div class="palette-item bg-success-900 text-light">900</div>
-    </div>
-
-    <div class="palette col-sm-4 col-lg-2">
+     <div class="palette col-sm-4 col-lg-2">
         Primary:<br />
         <div class="palette-item bg-primary-50">50</div>
         <div class="palette-item bg-primary-100">100</div>
@@ -4536,6 +4494,34 @@ $('#slider2').CFW_Slider({
     </div>
 
     <div class="palette col-sm-4 col-lg-2">
+        Success:<br />
+        <div class="palette-item bg-success-50">50</div>
+        <div class="palette-item bg-success-100">100</div>
+        <div class="palette-item bg-success-200">200</div>
+        <div class="palette-item bg-success-300">300</div>
+        <div class="palette-item bg-success-400">400</div>
+        <div class="palette-item bg-success-500 text-light">500</div>
+        <div class="palette-item bg-success-600 text-light">600</div>
+        <div class="palette-item bg-success-700 text-light">700</div>
+        <div class="palette-item bg-success-800 text-light">800</div>
+        <div class="palette-item bg-success-900 text-light">900</div>
+    </div>
+
+    <div class="palette col-sm-4 col-lg-2">
+        Info:<br />
+        <div class="palette-item bg-info-50">50</div>
+        <div class="palette-item bg-info-100">100</div>
+        <div class="palette-item bg-info-200">200</div>
+        <div class="palette-item bg-info-300">300</div>
+        <div class="palette-item bg-info-400">400</div>
+        <div class="palette-item bg-info-500 text-light">500</div>
+        <div class="palette-item bg-info-600 text-light">600</div>
+        <div class="palette-item bg-info-700 text-light">700</div>
+        <div class="palette-item bg-info-800 text-light">800</div>
+        <div class="palette-item bg-info-900 text-light">900</div>
+    </div>
+
+    <div class="palette col-sm-4 col-lg-2">
         Warning:<br />
         <div class="palette-item bg-warning-50">50</div>
         <div class="palette-item bg-warning-100">100</div>
@@ -4548,9 +4534,37 @@ $('#slider2').CFW_Slider({
         <div class="palette-item bg-warning-800 text-light">800</div>
         <div class="palette-item bg-warning-900 text-light">900</div>
     </div>
+
+    <div class="palette col-sm-4 col-lg-2">
+        Danger:<br />
+        <div class="palette-item bg-danger-50">50</div>
+        <div class="palette-item bg-danger-100">100</div>
+        <div class="palette-item bg-danger-200">200</div>
+        <div class="palette-item bg-danger-300">300</div>
+        <div class="palette-item bg-danger-400">400</div>
+        <div class="palette-item bg-danger-500 text-light">500</div>
+        <div class="palette-item bg-danger-600 text-light">600</div>
+        <div class="palette-item bg-danger-700 text-light">700</div>
+        <div class="palette-item bg-danger-800 text-light">800</div>
+        <div class="palette-item bg-danger-900 text-light">900</div>
+    </div>
 </div>
 
 <div class="row">
+    <div class="palette col-sm-4 col-lg-2">
+        UI Base:<br />
+        <div class="palette-item bg-uibase-50">50</div>
+        <div class="palette-item bg-uibase-100">100</div>
+        <div class="palette-item bg-uibase-200">200</div>
+        <div class="palette-item bg-uibase-300">300</div>
+        <div class="palette-item bg-uibase-400">400</div>
+        <div class="palette-item bg-uibase-500 text-light">500</div>
+        <div class="palette-item bg-uibase-600 text-light">600</div>
+        <div class="palette-item bg-uibase-700 text-light">700</div>
+        <div class="palette-item bg-uibase-800 text-light">800</div>
+        <div class="palette-item bg-uibase-900 text-light">900</div>
+    </div>
+
     <div class="palette col-sm-4 col-lg-2">
         Grayscale:<br />
         <div class="palette-item bg-gray-50">50</div>
